loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:5: error: value += is not a member of Int
      i+=1
       ^Poucet1:10: error: not found: value sortieTrouve
} while (sortieTrouve()!) 
         ^